--- a/_pgbackup/index_1631893279.html
+++ b/_pgbackup/index_1631893279.html
@@ -20,15 +20,15 @@
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,300,900,700&subset=latin-ext,latin">
     </head>
     <body>
-        <div class="poster" style="background-image:url('images/willian.jpg');" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
+        <div class="poster" style="background-image:url('images/pine.cone.1024.jpg');" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
         <div class="text">
             <div class="container-fluid">
                 <section>
-                    <h1 data-pgc-edit="title">Willian Hess</h1>
-                    <h2 data-pgc-edit="subtitle">Analista de T.I.</h2>
+                    <h1 data-pgc-edit="title">Mr. Pine Cone</h1>
+                    <h2 data-pgc-edit="subtitle">CPO, Pine Coast</h2>
                 </section>
                 <section>
-                    <a class="btn btn-success" data-pgc-edit="button[href, no_content]" data-pgc-edit-ext-bs-button-type href="http://pinegrow.com" data-pgc-define="button" data-pgc-define-name="Action button"><i class="fa fa-file-o" data-pgc-edit="button.icon[no_content]" data-pgc-edit-ext-fa></i> <span data-pgc-edit="button.label">&nbsp; Baixar curriculo</span></a>
+                    <a class="btn btn-success" data-pgc-edit="button[href, no_content]" data-pgc-edit-ext-bs-button-type href="http://pinegrow.com" data-pgc-define="button" data-pgc-define-name="Action button" data-pg-collapsed><i class="fa fa-tree" data-pgc-edit="button.icon[no_content]" data-pgc-edit-ext-fa></i> <span data-pgc-edit="button.label">Let's plant Pines!</span></a>
                 </section>
                 <section class="description" data-pgc-edit="description">
                     <p>I'm a professional pine cone. My passion is planting new pine trees. That's also my day job. Rolling around in the grass is the best - when I'm not working, of course. I take my work seriously. A lot depends on what I do. Without pine trees the wind would blow away the soil and the world would become a desolate place.</p>
@@ -37,7 +37,7 @@
                 </section>
                 <section class="tags">
                     <h3>Skills</h3>
-                    <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill"> 
+                    <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill" data-pg-collapsed> 
                         <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#planting</li>                         
                         <li data-pgc="skill" data-pgc-field="label">#growing</li>                         
                         <li data-pgc="skill" data-pgc-field="label">#rolling</li>
@@ -48,22 +48,22 @@
                 <section class="row experience">
                     <div class="col-sm-6">
                         <h3>Work</h3> 
-                        <ul class="list-unstyled" data-pgc-edit="work" data-pgc-edit-types="workitem">
+                        <ul class="list-unstyled" data-pgc-edit="work" data-pgc-edit-types="workitem" data-pg-collapsed>
                             <li data-pgc-define="workitem" data-pgc-define-name="Work item" data-pgc-edit="label">Chief planting officer</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
                         <h3>Education</h3> 
-                        <ul class="list-unstyled" data-pgc-edit="education" data-pgc-edit-types="eduitem">
+                        <ul class="list-unstyled" data-pgc-edit="education" data-pgc-edit-types="eduitem" data-pg-collapsed>
                             <li data-pgc-define="eduitem" data-pgc-define-name="Education item" data-pgc-edit="label">Pine Tree Academy</li>
                             <li data-pgc="eduitem" data-pgc-field="label">Needle Garden</li>
                         </ul>
                     </div>
                 </section>
-                <section class="social-buttons" data-pgc-edit="socialbuttons" data-pgc-edit-types="social">
-                    <a href="https://www.facebook.com/pinegrow" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
-                    <a href="https://twitter.com/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-twitter" data-pgc-field="icon"></i></a>
-                    <a href="https://www.linkedin.com/company/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
+                <section class="social-buttons" data-pgc-edit="socialbuttons" data-pgc-edit-types="social" data-pg-collapsed>
+                    <a href="https://www.facebook.com/pinegrow" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]" data-pg-collapsed><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
+                    <a href="https://twitter.com/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link" data-pg-collapsed><i class="fa fa-fw fa-twitter" data-pgc-field="icon"></i></a>
+                    <a href="https://www.linkedin.com/company/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link" data-pg-collapsed><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
                 </section>
             </div>
         </div>
