--- a/_pgbackup/index_1631896042.html
+++ b/_pgbackup/index_1631896042.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,300,900,700&subset=latin-ext,latin">
     </head>
     <body>
-        <div class="poster" style="background-image:url('images/willianh.jpg');" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
+        <div class="poster" style="background-image:url('images/willian.jpg');" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
         <div class="text">
             <div class="container-fluid">
                 <section>
