--- a/_pgbackup/index_1631898265.html
+++ b/_pgbackup/index_1631898265.html
@@ -31,41 +31,39 @@
                     <a class="btn btn-success" data-pgc-edit="button[href, no_content]" data-pgc-edit-ext-bs-button-type href="https://github.com/willianhess/willianhess.github.io/raw/main/documets/WillianHess_Curriculo.pdf" data-pgc-define="button" data-pgc-define-name="Action button"><i class="fa fa-file-o" data-pgc-edit="button.icon[no_content]" data-pgc-edit-ext-fa></i> <span data-pgc-edit="button.label">&nbsp; Baixar curriculo</span></a>
                 </section>
                 <section class="description" data-pgc-edit="description">
-                    <p>Sou um profissional em T.I. com desejo em conhecimento, sempre visando novas tecnologias que podem melhorar o desempenho, confiabilidade e a segurança do ambiente de trabalho.</p>
-                    <p>A área da tecnologia é muito vasta e as vezes assustadora, mas com treinamento e vontade pode-se alcançar qualquer coisa.</p>
-                    <p>Você pode entrar em contato comigo se precisar de um analista. Também pode checar minhas redes sociais e ver o que ando fazendo.</p>
+                    <p>I'm a professional pine cone. My passion is planting new pine trees. That's also my day job. Rolling around in the grass is the best - when I'm not working, of course. I take my work seriously. A lot depends on what I do. Without pine trees the wind would blow away the soil and the world would become a desolate place.</p>
+                    <p>Falling down from a tall pine tree was a bit scarry. But I managed ok, thanks to the rigorous training in my early years, when I was still a little green cone hanging from a branch.</p>
+                    <p>You should give me a call if you need strong pine trees planted in your garden. And check out my social profiles to see my latest adventures.&nbsp;</p>
                 </section>
                 <section class="tags">
-                    <h3>Abilidades</h3>
+                    <h3>Skills</h3>
                     <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill"> 
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Active Directory</li>
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Windows server / Desktop</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#AS400</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#GLPI</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Veeam</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Web Dev</li>                         
+                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#planting</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#growing</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#rolling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#falling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#entrepreneurship</li>                         
                     </ul>
                 </section>
                 <section class="row experience">
                     <div class="col-sm-6">
-                        <h3>Profissão</h3> 
+                        <h3>Work</h3> 
                         <ul class="list-unstyled" data-pgc-edit="work" data-pgc-edit-types="workitem">
-                            <li data-pgc-define="workitem" data-pgc-define-name="Work item" data-pgc-edit="label">Analista de T.I.</li>
+                            <li data-pgc-define="workitem" data-pgc-define-name="Work item" data-pgc-edit="label">Chief planting officer</li>
                         </ul>
                     </div>
                     <div class="col-sm-6">
-                        <h3>Educação</h3> 
+                        <h3>Education</h3> 
                         <ul class="list-unstyled" data-pgc-edit="education" data-pgc-edit-types="eduitem">
-                            <li data-pgc-define="eduitem" data-pgc-define-name="Education item" data-pgc-edit="label">Unissociesc</li>
-                            <li data-pgc-define="eduitem" data-pgc-define-name="Education item" data-pgc-edit="label">Senac</li>
-                            <li data-pgc-define="eduitem" data-pgc-define-name="Education item" data-pgc-edit="label">udemy</li>
+                            <li data-pgc-define="eduitem" data-pgc-define-name="Education item" data-pgc-edit="label">Pine Tree Academy</li>
+                            <li data-pgc="eduitem" data-pgc-field="label">Needle Garden</li>
                         </ul>
                     </div>
                 </section>
                 <section class="social-buttons" data-pgc-edit="socialbuttons" data-pgc-edit-types="social">
-                    <a href="https://www.facebook.com/willian.hess" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
-                    <a href="https://www.linkedin.com/in/willian-hess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
-                    <a href="https://www.instagram.com/willianhess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-instagram" data-pgc-field="icon"></i></a>
+                    <a href="https://www.facebook.com/pinegrow" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
+                    <a href="https://twitter.com/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-twitter" data-pgc-field="icon"></i></a>
+                    <a href="https://www.linkedin.com/company/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
                 </section>
             </div>
         </div>
