--- a/_pgbackup/index_1631906580.html
+++ b/_pgbackup/index_1631906580.html
@@ -38,12 +38,11 @@
                 <section class="tags">
                     <h3>Abilidades</h3>
                     <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill"> 
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Active Directory</li>
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Windows server / Desktop</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#AS400</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#GLPI</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Veeam</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Web Dev</li>                         
+                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#planting</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#growing</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#rolling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#falling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#entrepreneurship</li>                         
                     </ul>
                 </section>
                 <section class="row experience">
@@ -63,9 +62,9 @@
                     </div>
                 </section>
                 <section class="social-buttons" data-pgc-edit="socialbuttons" data-pgc-edit-types="social">
-                    <a href="https://www.facebook.com/willian.hess" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
-                    <a href="https://www.linkedin.com/in/willian-hess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
-                    <a href="https://www.instagram.com/willianhess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-instagram" data-pgc-field="icon"></i></a>
+                    <a href="https://www.facebook.com/pinegrow" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
+                    <a href="https://twitter.com/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-twitter" data-pgc-field="icon"></i></a>
+                    <a href="https://www.linkedin.com/company/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
                 </section>
             </div>
         </div>
