--- a/_pgbackup/index_1631902118.html
+++ b/_pgbackup/index_1631902118.html
@@ -31,19 +31,18 @@
                     <a class="btn btn-success" data-pgc-edit="button[href, no_content]" data-pgc-edit-ext-bs-button-type href="https://github.com/willianhess/willianhess.github.io/raw/main/documets/WillianHess_Curriculo.pdf" data-pgc-define="button" data-pgc-define-name="Action button"><i class="fa fa-file-o" data-pgc-edit="button.icon[no_content]" data-pgc-edit-ext-fa></i> <span data-pgc-edit="button.label">&nbsp; Baixar curriculo</span></a>
                 </section>
                 <section class="description" data-pgc-edit="description">
-                    <p>Sou um profissional em T.I. com desejo em conhecimento, sempre visando novas tecnologias que podem melhorar o desempenho, confiabilidade e a segurança do ambiente de trabalho.</p>
-                    <p>A área da tecnologia é muito vasta e as vezes assustadora, mas com treinamento e vontade pode-se alcançar qualquer coisa.</p>
+                    <p>Sou um profissional em T.I. com desejo em conhecimento, sempre visando novas tecnologias que podem melhorar o desempenho, confiabilidade e a segurança ao ambiente virtual de trabalho.</p>
+                    <p>O area da tecnologia é muito vasta e as vezes assustadora, mas com treinamento e vontade pode-se alcançar qualque coisa.</p>
                     <p>Você pode entrar em contato comigo se precisar de um analista. Também pode checar minhas redes sociais e ver o que ando fazendo.</p>
                 </section>
                 <section class="tags">
                     <h3>Abilidades</h3>
                     <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill"> 
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Active Directory</li>
-                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Windows server / Desktop</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#AS400</li>                         
-                        <li data-pgc="skill" data-pgc-field="label">#GLPI</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Veeam</li>
-                        <li data-pgc="skill" data-pgc-field="label">#Web Dev</li>                         
+                        <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#planting</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#growing</li>                         
+                        <li data-pgc="skill" data-pgc-field="label">#rolling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#falling</li>
+                        <li data-pgc="skill" data-pgc-field="label">#entrepreneurship</li>                         
                     </ul>
                 </section>
                 <section class="row experience">
@@ -63,9 +62,9 @@
                     </div>
                 </section>
                 <section class="social-buttons" data-pgc-edit="socialbuttons" data-pgc-edit-types="social">
-                    <a href="https://www.facebook.com/willian.hess" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
-                    <a href="https://www.linkedin.com/in/willian-hess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
-                    <a href="https://www.instagram.com/willianhess/" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-instagram" data-pgc-field="icon"></i></a>
+                    <a href="https://www.facebook.com/pinegrow" class="social-button" data-pgc-define="social" data-pgc-define-name="Social button" data-pgc-edit="link[href, no_content]"><i class="fa fa-facebook fa-fw" data-pgc-edit="icon[no_content]" data-pgc-edit-ext-fa></i></a>
+                    <a href="https://twitter.com/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-twitter" data-pgc-field="icon"></i></a>
+                    <a href="https://www.linkedin.com/company/pinegrow" class="social-button" data-pgc="social" data-pgc-field="link"><i class="fa fa-fw fa-linkedin" data-pgc-field="icon"></i></a>
                 </section>
             </div>
         </div>
