coreção de portugues

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>Você pode entrar em contato comigo se precisar de um analista. Também pode checar minhas redes sociais e ver o que ando fazendo.</p>
                 </section>
                 <section class="tags">
-                    <h3>Abilidades</h3>
+                    <h3>Habilidades</h3>
                     <ul class="list-inline" data-pgc-edit="skills" data-pgc-edit-types="skill"> 
                         <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Active Directory</li>
                         <li data-pgc-define="skill" data-pgc-define-name="Skill" data-pgc-edit="label">#Windows server / Desktop</li>                         
