--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,300,900,700&subset=latin-ext,latin">
     </head>
     <body>
-        <div class="poster" style="background-image:url(https://im.ge/i/s9D6bD);" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
+        <div class="poster" style="background-image:url(https://i.im.ge/2023/01/17/s9D6bD.Foto-de-Perfil-LinkedIn-Programador-Full-Stack-Tecnologia-Azul.png);" data-pgc-edit="poster[no_content]" data-pgc-edit-bckimage></div>
         <div class="text">
             <div class="container-fluid">
                 <section>
